postcss/testData/inspections/customPropertiesSet/insideAtRule.pcss
@media all {
  <error descr="Custom property sets are only allowed on `:root` rules">--b: {
    font-size: 10px;
  }</error>
}